# rust-auth-server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
auth-server-lib/: Cargo.toml
auth-server-lib/src/: lib.rs  schema.rs
auth-server-lib/src/api/: authentication.rs  endpoints.rs  errors.rs  mod.rs  model.rs
auth-server-lib/src/dboilerplate/: configuration.rs  mod.rs
auth-server-lib/src/tests/: config.rs  mod.rs
auth-server-lib/src/util/: mod.rs
auth-server-lib/src/util/database/: connection.rs  user_email.rs
auth-server-lib/src/util/security/: hasher.rs  mod.rs  password_hasher.rs
auth-server-lib/src/util/security/password_hasher/: argon2.rs
auth-server-lib/src/util/security/password_hashers/: argon2.rs  mod.rs
auth_frontend/: README.md  pubspec.yaml
auth_frontend/android/app/: build.gradle
auth_frontend/assets/lang/: en_US.ftl  info.json
auth_frontend/ios/Runner/: Info.plist
auth_frontend/ios/Runner.xcodeproj/: project.pbxproj
auth_frontend/lib/: main.dart
auth_frontend/linux/: CMakeLists.txt  my_application.cc
auth_frontend/test/: widget_test.dart
auth_frontend/web/: index.html  manifest.json
auth_frontend/windows/: CMakeLists.txt
auth_server/: Cargo.toml
dboilerplate/: Cargo.toml
dboilerplate/src/: lib.rs
dboilerplate/src/dboilerplate/: mod.rs
dboilerplate/src/tests/: config.rs
dboilerplate/src/util/: configuration.rs
migrations/2022-09-16-004005_create_users_table/: down.sql  up.sql
migrations/2022-09-25-231848_app_login/: down.sql  up.sql
rocket-server/: Cargo.toml
rocket-server/src/: endpoints.rs  main.rs
rocket_server/: Cargo.toml
src/: catchers.rs  main.rs  schema.rs
token-helper/: Cargo.toml
token-helper/scripts/: genkey.py
token-helper/src/: lib.rs  manager.rs  token_helper.rs  user.rs
(+25 files in other folders)
