[package]
name = "auth-server-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dboilerplate = { path = "../dboilerplate" }
token-helper = { path = "../token-helper" }
serde = { version ="1.0.144", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres"] }
rocket_okapi = "0.8.0-rc.2"
argon2 = "0.4.1"
rand_core = { version = "0.6.4", features = ["std"] }
