[package]
name = "dboilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.7", features = ["toml", "env"] }
dirs = "4.0.0"
dotenvy = "0.15.3"
diesel = { version = "2.0.0", features = ["postgres"] }