[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-server-lib = { path = "../auth-server-lib" }
colored = "2.0.0"
dboilerplate = { path = "../dboilerplate" }
rocket = { version = "0.5.0-rc.2", features = ["tls", "json", "http2"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
serde_json = "1.0.85"
